--- a/password-manager/src/App.css
+++ b/password-manager/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+.font {
+  font-family: 'Nunito', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pointer {
+  cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bodybg {
+  background-color: #313131;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.BlueTxt {
+  color: #62a7ce;
 }
-
-.App-link {
-  color: #61dafb;
+.grayTxt {
+  color: #757575;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.line {
+  border-left: 3px solid rgb(77, 77, 77);
+  height: 60vh;
+  position: fixed;
+  left: 50%;
+  top: 20%;
+  z-index: 1;
+}
+.col-6 {
+  position: relative;
+  z-index: 2;
 }
